fix: heading letter spacing

--- a/src/main/resources/static/assets/style/style.scss
+++ b/src/main/resources/static/assets/style/style.scss
@@ -23,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-    letter-spacing: 0.2rem;
+    letter-spacing: 0.1rem;
 }
 
 main {
